// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDo should create a to do 1`] = `
Object {
  "data": Object {
    "createToDo": Object {
      "description": "Test create description todo",
      "status": "PENDING",
      "title": "Test create todo",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo should delete a to do 1`] = `
Object {
  "data": Object {
    "deleteToDo": Object {
      "_id": "5e16075abba89142f8f2afd2",
      "description": "Desc 1",
      "title": "Todo 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo should return a specific todo 1`] = `
Object {
  "data": Object {
    "getToDo": Object {
      "_id": "5e1607772c8db465edc44a4c",
      "status": "PENDING",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo should return an array of to do 1`] = `
Object {
  "data": Object {
    "getAllToDo": Array [
      Object {
        "_id": "5e16075abba89142f8f2afd2",
      },
      Object {
        "_id": "5e1607772c8db465edc44a4c",
      },
      Object {
        "_id": "5e1607819c9eb8b8be169cf2",
      },
      Object {
        "_id": "5e1607878d043e453fcdfea2",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo should return an empty array if there is no todo 1`] = `
Object {
  "data": Object {
    "getAllToDo": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo should update a to do 1`] = `
Object {
  "data": Object {
    "updateToDo": Object {
      "_id": "5e16075abba89142f8f2afd2",
      "description": "Updated todo description",
      "title": "Updated todo title",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo shouldn't create a to do with a DONE status in params 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You can't create a to do with a DONE status],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`ToDo shouldn't create a to do with a ID in params 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You can't create a to do with an ID],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
